theme: fix mailchimp form

--- a/assets/scss/shortcodes/_mailchimp.scss
+++ b/assets/scss/shortcodes/_mailchimp.scss
@@ -27,6 +27,9 @@
 
       div {
         @extend .col;
+        label {
+          @extend .form-label;
+        }
 
         input {
           @extend .form-control;
