--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,3 +1,18 @@
+
 {{ define "main" }}
-  {{ partial "default.html" . }}
+
+      <header>
+        <h1>{{.Title}}</h1>
+      </header>
+      <!-- "{{.Content}}" pulls from the markdown content of the corresponding _index.md -->
+      {{.Content}}
+
+    <ul>
+      <!-- Ranges through content/posts/*.md -->
+      {{ range .Pages }}
+        <li>
+          <a href="{{.Permalink}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
+        </li>
+      {{ end }}
+    </ul>
 {{ end }}
