--- a/assets/scss/components/_10-global.scss
+++ b/assets/scss/components/_10-global.scss
@@ -34,3 +34,12 @@ p {
   }
 
 }
+
+.h1 {
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+code {
+  font-feature-settings: "ss01", "ss02", "ss03", "ss04", "ss05", "ss06", "zero", "onum";
+}
