--- a/assets/scss/plugins/_highlight.scss
+++ b/assets/scss/plugins/_highlight.scss
@@ -1,82 +1,233 @@
-/* Background */ .chroma { background-color: #ffffff }
-/* Other */ .chroma .x {  }
-/* Error */ .chroma .err { color: #a61717; background-color: #e3d2d2 }
-/* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
-/* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; width: auto; overflow: auto; display: block; }
-/* LineHighlight */ .chroma .hl { display: block; width: 100%;background-color: #ffffcc }
-/* LineNumbersTable */ .chroma .lnt { margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
-/* LineNumbers */ .chroma .ln { margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
-/* Keyword */ .chroma .k { color: #000000; font-weight: bold }
-/* KeywordConstant */ .chroma .kc { color: #000000; font-weight: bold }
-/* KeywordDeclaration */ .chroma .kd { color: #000000; font-weight: bold }
-/* KeywordNamespace */ .chroma .kn { color: #000000; font-weight: bold }
-/* KeywordPseudo */ .chroma .kp { color: #000000; font-weight: bold }
-/* KeywordReserved */ .chroma .kr { color: #000000; font-weight: bold }
-/* KeywordType */ .chroma .kt { color: #445588; font-weight: bold }
-/* Name */ .chroma .n {  }
-/* NameAttribute */ .chroma .na { color: #008080 }
-/* NameBuiltin */ .chroma .nb { color: #0086b3 }
-/* NameBuiltinPseudo */ .chroma .bp { color: #999999 }
-/* NameClass */ .chroma .nc { color: #445588; font-weight: bold }
-/* NameConstant */ .chroma .no { color: #008080 }
-/* NameDecorator */ .chroma .nd { color: #3c5d5d; font-weight: bold }
-/* NameEntity */ .chroma .ni { color: #800080 }
-/* NameException */ .chroma .ne { color: #990000; font-weight: bold }
-/* NameFunction */ .chroma .nf { color: #990000; font-weight: bold }
-/* NameFunctionMagic */ .chroma .fm {  }
-/* NameLabel */ .chroma .nl { color: #990000; font-weight: bold }
-/* NameNamespace */ .chroma .nn { color: #555555 }
-/* NameOther */ .chroma .nx {  }
-/* NameProperty */ .chroma .py {  }
-/* NameTag */ .chroma .nt { color: #000080 }
-/* NameVariable */ .chroma .nv { color: #008080 }
-/* NameVariableClass */ .chroma .vc { color: #008080 }
-/* NameVariableGlobal */ .chroma .vg { color: #008080 }
-/* NameVariableInstance */ .chroma .vi { color: #008080 }
-/* NameVariableMagic */ .chroma .vm {  }
-/* Literal */ .chroma .l {  }
-/* LiteralDate */ .chroma .ld {  }
-/* LiteralString */ .chroma .s { color: #dd1144 }
-/* LiteralStringAffix */ .chroma .sa { color: #dd1144 }
-/* LiteralStringBacktick */ .chroma .sb { color: #dd1144 }
-/* LiteralStringChar */ .chroma .sc { color: #dd1144 }
-/* LiteralStringDelimiter */ .chroma .dl { color: #dd1144 }
-/* LiteralStringDoc */ .chroma .sd { color: #dd1144 }
-/* LiteralStringDouble */ .chroma .s2 { color: #dd1144 }
-/* LiteralStringEscape */ .chroma .se { color: #dd1144 }
-/* LiteralStringHeredoc */ .chroma .sh { color: #dd1144 }
-/* LiteralStringInterpol */ .chroma .si { color: #dd1144 }
-/* LiteralStringOther */ .chroma .sx { color: #dd1144 }
-/* LiteralStringRegex */ .chroma .sr { color: #009926 }
-/* LiteralStringSingle */ .chroma .s1 { color: #dd1144 }
-/* LiteralStringSymbol */ .chroma .ss { color: #990073 }
-/* LiteralNumber */ .chroma .m { color: #009999 }
-/* LiteralNumberBin */ .chroma .mb { color: #009999 }
-/* LiteralNumberFloat */ .chroma .mf { color: #009999 }
-/* LiteralNumberHex */ .chroma .mh { color: #009999 }
-/* LiteralNumberInteger */ .chroma .mi { color: #009999 }
-/* LiteralNumberIntegerLong */ .chroma .il { color: #009999 }
-/* LiteralNumberOct */ .chroma .mo { color: #009999 }
-/* Operator */ .chroma .o { color: #000000; font-weight: bold }
-/* OperatorWord */ .chroma .ow { color: #000000; font-weight: bold }
-/* Punctuation */ .chroma .p {  }
-/* Comment */ .chroma .c { color: #999988; font-style: italic }
-/* CommentHashbang */ .chroma .ch { color: #999988; font-style: italic }
-/* CommentMultiline */ .chroma .cm { color: #999988; font-style: italic }
-/* CommentSingle */ .chroma .c1 { color: #999988; font-style: italic }
-/* CommentSpecial */ .chroma .cs { color: #999999; font-weight: bold; font-style: italic }
-/* CommentPreproc */ .chroma .cp { color: #999999; font-weight: bold; font-style: italic }
-/* CommentPreprocFile */ .chroma .cpf { color: #999999; font-weight: bold; font-style: italic }
-/* Generic */ .chroma .g {  }
-/* GenericDeleted */ .chroma .gd { color: #000000; background-color: #ffdddd }
-/* GenericEmph */ .chroma .ge { color: #000000; font-style: italic }
-/* GenericError */ .chroma .gr { color: #aa0000 }
-/* GenericHeading */ .chroma .gh { color: #999999 }
-/* GenericInserted */ .chroma .gi { color: #000000; background-color: #ddffdd }
-/* GenericOutput */ .chroma .go { color: #888888 }
-/* GenericPrompt */ .chroma .gp { color: #555555 }
-/* GenericStrong */ .chroma .gs { font-weight: bold }
-/* GenericSubheading */ .chroma .gu { color: #aaaaaa }
-/* GenericTraceback */ .chroma .gt { color: #aa0000 }
-/* GenericUnderline */ .chroma .gl { text-decoration: underline }
-/* TextWhitespace */ .chroma .w { color: #bbbbbb }
+pre {
+  @extend .m-0;
+  @extend .p-0;
+  font-size: 0.9rem;
+}
+
+.chroma {
+  color: #272822;
+  background-color: #fafafa;
+  .err {
+    color: #960050;
+    background-color: #1e0010;
+  }
+  .lntd {
+    vertical-align: top;
+    padding: 0;
+    margin: 0;
+    border: 0;
+  }
+  .lntable {
+    border-spacing: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    width: auto;
+    overflow: auto;
+    display: block;
+  }
+  .hl {
+    display: block;
+    width: 100%;
+    background-color: #ffffcc;
+  }
+  .lnt {
+    margin-right: 0.4em;
+    padding: 0 0.4em 0 0.4em;
+    color: #7f7f7f;
+  }
+  .ln {
+    margin-right: 0.4em;
+    padding: 0 0.4em 0 0.4em;
+    color: #7f7f7f;
+  }
+  .k {
+    color: #00a8c8;
+  }
+  .kc {
+    color: #00a8c8;
+  }
+  .kd {
+    color: #00a8c8;
+  }
+  .kn {
+    color: #f92672;
+  }
+  .kp {
+    color: #00a8c8;
+  }
+  .kr {
+    color: #00a8c8;
+  }
+  .kt {
+    color: #00a8c8;
+  }
+  .n {
+    color: #111111;
+  }
+  .na {
+    color: #75af00;
+  }
+  .nb {
+    color: #111111;
+  }
+  .bp {
+    color: #111111;
+  }
+  .nc {
+    color: #75af00;
+  }
+  .no {
+    color: #00a8c8;
+  }
+  .nd {
+    color: #75af00;
+  }
+  .ni {
+    color: #111111;
+  }
+  .ne {
+    color: #75af00;
+  }
+  .nf {
+    color: #75af00;
+  }
+  .fm {
+    color: #111111;
+  }
+  .nl {
+    color: #111111;
+  }
+  .nn {
+    color: #111111;
+  }
+  .nx {
+    color: #75af00;
+  }
+  .py {
+    color: #111111;
+  }
+  .nt {
+    color: #f92672;
+  }
+  .nv {
+    color: #111111;
+  }
+  .vc {
+    color: #111111;
+  }
+  .vg {
+    color: #111111;
+  }
+  .vi {
+    color: #111111;
+  }
+  .vm {
+    color: #111111;
+  }
+  .l {
+    color: #ae81ff;
+  }
+  .ld {
+    color: #d88200;
+  }
+  .s {
+    color: #d88200;
+  }
+  .sa {
+    color: #d88200;
+  }
+  .sb {
+    color: #d88200;
+  }
+  .sc {
+    color: #d88200;
+  }
+  .dl {
+    color: #d88200;
+  }
+  .sd {
+    color: #d88200;
+  }
+  .s2 {
+    color: #d88200;
+  }
+  .se {
+    color: #8045ff;
+  }
+  .sh {
+    color: #d88200;
+  }
+  .si {
+    color: #d88200;
+  }
+  .sx {
+    color: #d88200;
+  }
+  .sr {
+    color: #d88200;
+  }
+  .s1 {
+    color: #d88200;
+  }
+  .ss {
+    color: #d88200;
+  }
+  .m {
+    color: #ae81ff;
+  }
+  .mb {
+    color: #ae81ff;
+  }
+  .mf {
+    color: #ae81ff;
+  }
+  .mh {
+    color: #ae81ff;
+  }
+  .mi {
+    color: #ae81ff;
+  }
+  .il {
+    color: #ae81ff;
+  }
+  .mo {
+    color: #ae81ff;
+  }
+  .o {
+    color: #f92672;
+  }
+  .ow {
+    color: #f92672;
+  }
+  .p {
+    color: #111111;
+  }
+  .c {
+    color: #75715e;
+  }
+  .ch {
+    color: #75715e;
+  }
+  .cm {
+    color: #75715e;
+  }
+  .c1 {
+    color: #75715e;
+  }
+  .cs {
+    color: #75715e;
+  }
+  .cp {
+    color: #75715e;
+  }
+  .cpf {
+    color: #75715e;
+  }
+  .ge {
+    font-style: italic;
+  }
+  .gs {
+    font-weight: bold;
+  }
+}
