--- a/assets/scss/settings/_settings.scss
+++ b/assets/scss/settings/_settings.scss
@@ -15,11 +15,15 @@ $enable-deprecation-messages: true;
 $enable-important-utilities:  true;
 
 // Font Variables
-$primary-font: 'Montserrat', sans-serif;
+$font-family-sans-serif:      'betm', sans-serif;
 $icon-font: 'themify';
-$font-size-base:              1rem;
+$font-size-base:              1.2rem;
+$font-weight-normal:          400;
+$line-height-base:            1.3;
 $h1-font-size:                $font-size-base * 2;
 $h2-font-size:                $font-size-base * 1.8;
+$headings-font-weight:        700;
+$font-family-monospace:       'Fira Mono', monospace;
 
 // The Grid...
 $grid-breakpoints: (
