--- a/layouts/partials/header/brand.html
+++ b/layouts/partials/header/brand.html
@@ -1,6 +1,4 @@
-<h1>
-  <a href="/">
-    <img src="/images/logos/hugo-logo-wide.svg" alt="{{ .Site.Title }}">
-    Newsletter
-  </a>
-</h1>
+<a href="/" class="h1">
+  <img src="/images/logos/hugo-logo-wide.svg" alt="{{ site.Title }}">
+  <span class="d-none">Hugo</span>Newsletter
+</a>
