--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -29,7 +29,7 @@
 //@import "libs/bootstrap/scss/accordion";
 //@import "libs/bootstrap/scss/breadcrumb";
 @import "libs/bootstrap/scss/pagination";
-//@import "libs/bootstrap/scss/badge";
+@import "libs/bootstrap/scss/badge";
 @import "libs/bootstrap/scss/alert";
 //@import "libs/bootstrap/scss/progress";
 @import "libs/bootstrap/scss/list-group";
