fix: make cards fully clickable

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -15,7 +15,7 @@
         <p class="card-text">{{ .Description }}</p>
       </div>
       <div class="card-footer bg-transparent  text-end">
-        <a href="{{.Permalink}}" class="btn btn-outline-primary btn-sm">Read on...</a>
+        <a href="{{.Permalink}}" class="btn btn-outline-primary btn-sm stretched-link">Read on...</a>
       </div>
     </div>
   {{ end }}
