theme: move newsletter partial into partials directory

--- a/layouts/newsletter/single.html
+++ b/layouts/newsletter/single.html
@@ -1,4 +1,4 @@
 {{ define "main" }}
     <h2 class="mb-4 font-weight-medium">{{ .Title | safeHTML }}</h2>
-    {{ partial "snippets/newsletter.html" . }}
+    {{ partial "newsletter.html" . }}
 {{ end }}
